<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.SplashActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:id="@+id/img"
            android:src="@drawable/playstore"
            tools:ignore="ContentDescription" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:id="@+id/text"
            android:layout_below="@id/img"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat_app"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="-8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/light"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/india"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="18sp"
        />
</RelativeLayout>