<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.VerificationOTPActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="15dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="start"
            android:fontFamily="@font/bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:gravity="start"
            android:fontFamily="@font/regular"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:id="@+id/textView"
            android:fontFamily="@font/regular"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <com.chaos.view.PinView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PinWidget.PinView"
            app:lineWidth="2dp"
            app:itemSpacing="5dp"
            app:lineColor="#B9868585"
            app:itemCount="6"
            android:inputType="number"
            android:layout_gravity="start"
            android:gravity="start"
            android:textSize="16sp"
            android:id="@+id/validuserotp"
            android:layout_marginTop="40dp"
            app:viewType="line"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:id="@+id/continue_btn"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">


                    <ProgressBar
                        android:id="@+id/button_progress"
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:layout_toStartOf="@id/button_text"
                        android:indeterminate="true"
                        android:indeterminateTint="#ffffff"
                        android:visibility="gone"
                        android:indeterminateTintMode="src_atop"
                        />

                    <TextView
                        android:id="@+id/button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:paddingStart="10dp"
                        android:paddingTop="13dp"
                        android:paddingEnd="10dp"
                        android:gravity="center"
                        android:paddingBottom="13dp"
                        android:textColor="@color/white"
                        android:text="@string/continue_btn"
                        android:fontFamily="@font/medium"
                        android:textSize="15sp" />

                </RelativeLayout>

            </FrameLayout>

        </androidx.cardview.widget.CardView>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trouble"
                android:gravity="start"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:id="@+id/btn_resend_otp"
                android:fontFamily="@font/bold"
                android:textColor="#E91E63"
                android:textSize="14sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>